Limit OpenAPI schema to 30 operations
